# auctionbot

./: Cargo.toml  README.md  auction.service  auction.sh
src/: admin.sql  auction.rs  bid.sql  bids.sql  channel.sql  commands.rs  gamerules.sql  gamestate.rs  gamestate.sql  item.sql  main.rs  minorpaths.sql  paths.sql  perks.sql  races.sql  user.sql  users.sql  win.sql  wins.sql
