[package]
name = "auctionbot"
version = "0.1.0"
authors = ["Antti-Ville Tuunainen <avtuunainen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.13"
chrono = "0.4"
env_logger = "0.8.2"
rand = "0.8.2"
num-traits = "0.2"
num-derive = "0.3"
envconfig = "0.9.1"

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4"]

[dependencies.tokio]
version = "1"
features = ["full"] 

[dependencies.serenity]
#git = "https://github.com/acdenisSK/serenity"
#branch = "await_next"
#default-features = false
version = "0.10.2"
features = ["client","utils", "gateway", "rustls_backend", "model","framework", "standard_framework"]
