[package]
name = "auctionbot"
version = "0.2.0"
authors = ["Antti-Ville Tuunainen <avtuunainen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
chrono = "0.4.23"
env_logger = "0.10.0"
rand = "0.8.5"
num-traits = "0.2"
num-derive = "0.3"
envconfig = "0.10.0"

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4"]

[dependencies.tokio]
version = "1.25"
features = ["full"] 

[dependencies.serenity]
#git = "https://github.com/acdenisSK/serenity"
#branch = "await_next"
#default-features = false
version = "0.11"
features = ["client","utils","cache", "gateway", "rustls_backend", "model","framework", "standard_framework"]
